--- a/app/views/join.html
+++ b/app/views/join.html
@@ -1,4 +1,4 @@
-<form ng-submit="process(joinForm.$valid)" name="joinForm" novalidate>
+<form ng-submit="process(joinForm.$valid, false)" name="joinForm" novalidate>
 	
 	<div ui-view></div>
 
