--- a/app/views/join-start.html
+++ b/app/views/join-start.html
@@ -1,20 +1,23 @@
-<div class="row">
+<div class="row first-page">
 	<div class="small-12 columns">
 		<h2>You're gonna love your {{ product.name }} health cover</h2>
 		<p>Let's get some information off you first.</p>
 		<p>
 			<label for="name">Name: </label>
-			<input type="text" name="name" ng-model="u.name" required>
+			<input type="text" name="name" ng-model="u.name" placeholder="Your name" required>
+			<span class="indicator">•</span>
 			<span ng-show="(joinForm.name.$error.required || (joinForm.name.$invalid && !joinForm.name.$pristine)) && control.submitted">Name is required</span>
 		</p>
 		<p>
-			<label for="name">Email: </label>
-			<input type="email" name="email" ng-model="u.email" required>
+			<label for="email">Email: </label>
+			<input type="email" name="email" ng-model="u.email" placeholder="Your email" required>
+			<span class="indicator">•</span>
 			<span ng-show="(joinForm.email.$error.required || (joinForm.email.$invalid && !joinForm.email.$pristine)) && control.submitted">Please enter valid email ID</span>
 		</p>
 		<p>
-			<label for="name">Mobile Number: </label>
-			<input type="text" name="phone" ng-model="u.phone" required>
+			<label for="phone">Mobile Number: </label>
+			<input type="text" name="phone" ng-model="u.phone" placeholder="Your mobile number" required>
+			<span class="indicator">•</span>
 			<span ng-show="(joinForm.phone.$error.required || (joinForm.phone.$invalid && !joinForm.phone.$pristine)) && control.submitted">Mobile number is required</span>
 		</p>
 	</div>
