--- a/app/views/products.html
+++ b/app/views/products.html
@@ -1,6 +1,4 @@
 <div class="row products-page">
-	<h3 class="page-title small-12 columns">Say hello to our most popular products.</h3>
-	<div class="small-12 columns" ui-view>
-		
-	</div>
+	<h3 class="page-title small-12 columns panel">Say hello to our most popular products.</h3>
+	<div class="small-12 columns" ui-view></div>
 </div>
