--- a/app/views/contact-block.html
+++ b/app/views/contact-block.html
@@ -12,6 +12,7 @@
 		</form>
 	</li>
 	<li class="contact-footer">
-		<logo></logo>
+		<logo></logo><br>
+		<p>&copy; HEALTH.COM.AU PTY LTD ALL RIGHTS RESERVED 2014</p>
 	</li>
 </ul>
