--- a/app/views/products.html
+++ b/app/views/products.html
@@ -2,3 +2,10 @@
 	<h3 class="page-title small-12 columns panel">Say hello to our most popular products.</h3>
 	<div class="small-12 columns" ui-view></div>
 </div>
+<section class="contact">
+	<div class="row">
+		<div class="small-12 columns">
+			<contact-block></contact-block>
+		</div>
+	</div>
+</section>
