--- a/app/views/whyus.html
+++ b/app/views/whyus.html
@@ -45,3 +45,10 @@
 		</div>
 	</div>
 </section>
+<section class="contact">
+	<div class="row">
+		<div class="small-12 columns">
+			<contact-block></contact-block>
+		</div>
+	</div>
+</section>
