--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -115,42 +115,6 @@ section.testimonials{
   }
 }
 
-// REASONS ON HOMEPAGE //
-.reasons{
-  height: 100%;
-
-  > div{
-    height: 50%;
-    overflow-y: hidden;
-    transform: translateY(0);
-
-    // &:nth-child(1){ background-color: lighten($product-purple, 10); }
-    // &:nth-child(2){ background-color: lighten($product-orange, 10); }
-    // &:nth-child(3){ background-color: lighten($product-pink, 10); }
-    // &:nth-child(4){ background-color: lighten($product-blue, 10); }
-
-    &.show-reason .reason{
-      transform: translateY(-100%);
-    }
-  }
-
-  .reason{
-    transition: all .5s $easeOutExpo;
-    height: 100%;
-
-    font-weight: 500;
-
-    > div{
-      height: 100%;
-      padding: 1em 0;
-
-      &.first{
-        font-size: 1.2em;
-      }
-    }
-  }
-}
-
 // PRODUCTS ON HOMEPAGE //
 
 section.home-products{
@@ -277,6 +241,11 @@ section.contact{
 
 // PRODUCTS VIEW //
 .products-page{
+  
+  .loading{
+    width: 180px;
+    margin: 1em auto;
+  }
 
   .page-title{
     margin-top: 1.5em;
@@ -318,7 +287,13 @@ section.contact{
 // JOIN PAGE STYLES //
 .join-form{
 
+  margin-top: 1em;
+
   .first-page{
+
+    .error{
+      display: none;
+    }
 
     label{
       visibility: hidden;
@@ -340,6 +315,11 @@ section.contact{
     top: -0.45em;
     font-size: 3em;
   }
+}
+
+// REVEAL MODAL //
+.reveal-modal{
+  padding: 1em;
 }
 
 
