--- a/app/views/product.html
+++ b/app/views/product.html
@@ -26,15 +26,15 @@
 		<div class="details">
 			<tabset>
 				<tab heading="Hospital">
-					<p class="panel">This product covers EVERYTHING except:</p>
+					<p class="pink panel">This product covers EVERYTHING except:</p>
 					<ul class="notcovered no-bullet">
 						<li ng-repeat="h in hospitals('notcovered')"><i class="fa fa-times"></i> {{ h.type }}</li>
 					</ul>
-					<p class="panel">This product has rerestricted cover for:</p>
+					<p class="orange panel">This product has rerestricted cover for:</p>
 					<ul class="restricted no-bullet">
 						<li ng-repeat="h in hospitals('restrictedcover')"><i class="fa fa-exclamation-triangle"></i> {{ h.type }}</li>
 					</ul>
-					<p class="panel">This product covers:</p>
+					<p class="green panel">This product has full cover for:</p>
 					<ul class="covered no-bullet">
 						<li ng-repeat="h in hospitals('covered')"><i class="fa fa-check"></i> {{ h.type }}</li>
 					</ul>
@@ -50,7 +50,7 @@
 						<tbody>
 							<tr ng-repeat="extra in product.extras">
 								<td>{{ extra.type }}</td>
-								<td>${{ extra.allowance | number }}</td>
+								<td><span ng-if="extra.allowance !== '0.00'">${{ extra.allowance | number }}</span></td>
 							</tr>
 						</tbody>
 					</table>
