--- a/app/views/view-products.html
+++ b/app/views/view-products.html
@@ -1,5 +1,5 @@
 <div class="carousel-container">
-	<p class="loading" ng-hide="productsLoaded">Loading...</p>
+	<p class="loading" ng-hide="productsLoaded"><preloader></preloader></p>
 	 <!-- rn-carousel-index="slideIndex" -->
 	<ul rn-carousel rn-carousel-indicator ng-show="productsLoaded">
 		<li ng-repeat="product in visibleProducts">
