--- a/app/views/products.html
+++ b/app/views/products.html
@@ -1,5 +1,5 @@
 <div class="row products-page">
-	<h3 class="page-title small-12 columns panel">Say hello to our most popular products.</h3>
+	<p class="page-title small-12 columns panel">Say hello to our most popular products.</p>
 	<div class="small-12 columns" ui-view></div>
 </div>
 <section class="contact">
