--- a/app/views/reason.html
+++ b/app/views/reason.html
@@ -1,7 +1,6 @@
-<div class="small-6 columns reason-container"
-		 class="show-{{ state.num }}" 
+<div class="small-6 columns reason-container show-{{ state.num }}"
 		 ng-click="nextPanel()">
-	<div class="reason show-{{ state.num }}">
-		<div ng-repeat="item in content" ng-class="{ 'tk-phoreuscherokee' : state.num === $index+1 }"><p ng-bind-html="item.text"></p> <i class="fa fa-angle-down" ng-show="$index === 0"></i></div>
+	<div class="reason">
+		<div class="item" ng-repeat="item in content" ng-class="{ 'tk-phoreuscherokee' : state.num === $index+1 }"><p ng-bind-html="item.text"></p> <i class="fa fa-angle-down" ng-show="$index === 0"></i></div>
 	</div>
 </div>
