--- a/app/views/whyus.html
+++ b/app/views/whyus.html
@@ -2,8 +2,9 @@
 	<div class="row">
 		<div class="small-12 columns">
 			<h2>Why us? We've got the happiest customers!</h2>
-			<p>We are pleased to announce we won the ServiceRage Happy Customer Award for 2014. Thanks so much to our incredible staff and our amazing customers for making it possible!</p>
-			<p><img src="images/service-rage.svg" width="100px" alt=""></p>
+			<p><img src="images/service-rage.svg" class="service-rage right" width="100px" alt=""> We are really proud to say that we won the Service Rage Customer Award for 2014. </p>
+			<p>At health we have a simple philosophy: if you're happy, we're happy. That's why we reinvented health insurance and made it work for you. </p>
+			<p></p>
 		</div>
 	</div>
 </section>
@@ -11,8 +12,12 @@
 <section class="middle-align">
 	<div class="row">
 		<div class="small-12 columns">
-			<h2>Health insurance made easy</h2>
-			<p>We’re a new sort of health insurance, and we’ve got some of the best people in the business behind us. Our team has more than 100 collective years of experience in the big corporate health insurers you know. But, we are doing it differently! We are making health insurance that is easier to understand, better value and above all: human. This is the health insurance that we want ourselves.</p>
+			<h2>Simple is the best policy</h2>
+			<p>Our policies have been designed so you are covered when you need it and you don't pay for stuff you don't use. </p>
+
+			<p>Get more $ back every time you claim on Extras and have the freedom to choose the healthcare professional you are most comfortable with.</p>
+
+			<p><a ui-sref="products.view" class="radius rounded button">Get covered now</a></p>
 		</div>
 	</div>
 </section>
@@ -20,9 +25,9 @@
 <section class="middle-align">
 	<div class="row">
 		<div class="small-12 columns">
-			<h2>Simple = better</h2>
-			<p>Every aspect of using health.com.au is simple – from selecting your health insurance policy to making a claim. Our policies are designed to deliver great value in a very straightforward, easy to understand way that enables you to take control of your health with minimal fuss.</p>
-			<a ui-sref="products.view" class="button">Our products</a>
+			<h2>Claiming made easy</h2>
+			<p>On-the-spot claiming at your healthcare appointments plus 24/7 online claiming. It's that easy. </p>
+			<a ui-sref="products.view" class="radius rounded button">Find out how</a>
 		</div>
 	</div>
 </section>
@@ -30,21 +35,14 @@
 <section class="middle-align">
 	<div class="row">
 		<div class="small-12 columns">
-			<h2>We love online</h2>
-			<p>We don’t want to send receipts in by snail mail, and we definitely don’t want to visit anyone’s shop to wait inline and fill out forms. We are online, like you. Our aim is that you can do it all online whenever you want, and that means less hassle.</p>
+			<h2>Do you love online?</h2>
+			<p>Like you, we love the efficiency of the web. That means no snail mail, no complicated paperwork and definitely no standing in queues. Our aim is that you can do it all online whenever you want. </p>
+			<a ui-sref="get-price.policy" class="radius rounded button">Join now</a>
 		</div>
 	</div>
 </section>
 
-<section class="middle-align">
-	<div class="row">
-		<div class="small-12 columns">
-			<h2>Customer Service with a heart</h2>
-			<p>When you need to speak with someone, we are here for you. No outsourced call centre for us. We are proud to be redefining customer service expectations – not just for health insurance but in all Australian industries.</p>
-			<a ui-sref="products.view" class="button">Our products</a>
-		</div>
-	</div>
-</section>
+
 <section class="contact">
 	<div class="row">
 		<div class="small-12 columns">
