--- a/app/views/product.html
+++ b/app/views/product.html
@@ -26,15 +26,15 @@
 		<div class="details">
 			<tabset>
 				<tab heading="Hospital">
-					<p class="pink panel">This product covers EVERYTHING except:</p>
+					<p class="pink">This product covers EVERYTHING except:</p>
 					<ul class="notcovered no-bullet">
 						<li ng-repeat="h in hospitals('notcovered')"><i class="fa fa-times"></i> {{ h.type }}</li>
 					</ul>
-					<p class="orange panel">This product has rerestricted cover for:</p>
+					<p class="orange">This product has rerestricted cover for:</p>
 					<ul class="restricted no-bullet">
 						<li ng-repeat="h in hospitals('restrictedcover')"><i class="fa fa-exclamation-triangle"></i> {{ h.type }}</li>
 					</ul>
-					<p class="green panel">This product has full cover for:</p>
+					<p class="green">This product has full cover for:</p>
 					<ul class="covered no-bullet">
 						<li ng-repeat="h in hospitals('covered')"><i class="fa fa-check"></i> {{ h.type }}</li>
 					</ul>
@@ -44,7 +44,7 @@
 						<thead>
 							<tr>
 								<th>Extra</th>
-								<th>Limit</th>
+								<th>Limit per person, per year</th>
 							</tr>
 						</thead>
 						<tbody>
