--- a/app/views/home.html
+++ b/app/views/home.html
@@ -3,7 +3,8 @@
 <section class="hero middle-align">
 	<div class="top-actions">
 		<ul>
-			<li><a ui-sref="join.start">I'm a customer</a></li>
+			<!-- ui-sref="join.start" -->
+			<li><a>I'm a customer</a></li>
 			<li><a ui-sref="products.view" class="get-quote-button">See products</a></li>
 		</ul>
 	</div>
