--- a/app/styles/_generic.scss
+++ b/app/styles/_generic.scss
@@ -43,8 +43,8 @@ section:nth-child(even){
 }
 
 section.middle-align{
-  height: 115%;
-  // @media #{$medium-up}{height: 100%}
+  height: 100%;
+  @media #{$large-up}{height: 50%}
   width: 100%;
   display: table;
   position: relative;
