--- a/app/views/view-products.html
+++ b/app/views/view-products.html
@@ -14,6 +14,7 @@
 						<h2 class="tk-phoreuscherokee">None of these scream "YOU"?</h2>
 						<p>That's ok! We've got plenty of products. Give us a call if none of these suit you, and one of our specialists will help you find cover that suits your life perfectly.</p>
 						<h3><a href="tel:1300 199 802">1300 199 802</a></h3>
+						<contact-block showForm="false"></contact-block>
 					</div>
 			</div>
 		</li>
