partial work done on join

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -316,9 +316,9 @@ section.contact{
 
   .first-page{
 
-    .error{
+    /*.error{
       display: none;
-    }
+    }*/
 
     label{
       visibility: hidden;
