--- a/app/views/home.html
+++ b/app/views/home.html
@@ -4,7 +4,7 @@
 	<div class="top-actions">
 		<ul>
 			<!-- ui-sref="join.start" -->
-			<li><a>I'm a customer</a></li>
+			<li><a ui-sref="join.start">I'm a customer</a></li>
 			<li><a ui-sref="products.view" class="get-quote-button">See products</a></li>
 		</ul>
 	</div>
