FINALLY FIXED FOUNDATION.

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -3,7 +3,7 @@
 
 // Include important shit //
 @import 'config';
-@import 'foundation/settings';
+@import 'settings';
 @import 'normalize';
 @import 'foundation'; 
 @import 'directives';
